[BUG] course lessons time span align center

--- a/app/assets/stylesheets/mixins/_lesson_block.scss
+++ b/app/assets/stylesheets/mixins/_lesson_block.scss
@@ -76,6 +76,7 @@
     .default-state {
       display: inline-block;
       text-align: center;
+      width: 100%;
     }
 
     .hover-state {
